--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-    <title>Dum3bi- Portfolio website of Dumebi Iwuchukwu</title>
-    <meta name="description" content="Dumebi Iwuchukwu is an art director, and UX/UI designer based in Lagos Nigeria. He teaches art direction at Oxygen academy Lagos.">
+    <title>Dumebi Iwuchukwu - Strategy, Design and Design Training</title>
+    <meta name="description" content="Chukwudumebi Iwuchukwu is a strategist, designer and teacher . He works with brands to create enabling experiences for consumers and helps people become amazing designers.">
     <meta name="theme-color" content="#1f1f22"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
@@ -153,7 +153,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi</h1>
-                <p class="lead">Art director | UX/UI designer</p>
+                <p class="lead">I design enabling experiences for people.</p>
             </div>
         </div>
 
@@ -166,13 +166,11 @@
 <div class="col-six tab-full right">
 
             <div>
-              <h3>I design enabling experiences for people.  </h3>
+              <h3>Chukwudumebi Iwuchukwu is a strategist, designer and teacher. </h3>
 
                 <p>
-                  My medical radiography background helps me approach projects with care, understanding problems before proferring solutions.
-                  My iterative design process starts with empathy and research, then ideation, prototyping (visual design and/or coding) and testing with the goal of providing effective, efficient and satisfactory solutions.
-                </p>
-                <p>  I am a member of the <a href="https://www.interaction-design.org/?r=chukwudumebi-iwuchukwu" target="_blank" rel="noopener">Interaction Design Foundation</a>, the world’s largest UX Design learning community.</p>
+                  Working at the intersection of digital product design, advertising and brand identity, he's had the privilege of creating enabling experiences for people with brand like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Wema Bank  and more.
+                <p>He's a member of the <a href="https://www.interaction-design.org/?r=chukwudumebi-iwuchukwu" target="_blank" rel="noopener">Interaction Design Foundation</a>, the world’s largest UX Design learning community.</p>
             </div>
 
 </div>
