--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
               <h3>Chukwudumebi Iwuchukwu is a strategist, designer and teacher. </h3>
 
                 <p>
-                  Working at the intersection of digital product design, advertising and brand identity, he's had the privilege of creating enabling experiences for people with brand like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Wema Bank  and more.
-                <p>He's a member of the <a href="https://www.interaction-design.org/?r=chukwudumebi-iwuchukwu" target="_blank" rel="noopener">Interaction Design Foundation</a>, the world’s largest UX Design learning community.</p>
+                  Working at the intersection of digital product design, advertising and brand identity, he's had the privilege of creating enabling experiences for people with brand like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Isobar, Wema Bank and more.
             </div>
 
 </div>
@@ -207,9 +206,9 @@
                  <a href="#modal-04" class="overlay">
                     <div class="folio-item-table">
                      <div class="folio-item-cell">
-                       <h3 class="folio-title">Taruwa Festival 2019</h3>
+                       <h3 class="folio-title">Budweiser</h3>
                      <span class="folio-types">
-                         Identity & Communication Design
+                         Brand, Product & Marketing Design
                      </span>
                   </div>
                     </div>
