--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <div class="col-six tab-full right">
 
             <div>
-              <h3>Chukwudumebi Iwuchukwu is a strategist, designer and teacher. </h3>
+              <h3>Dumebi Iwuchukwu is a strategist, designer and teacher. </h3>
 
                 <p>
                   Working at the intersection of digital product design, advertising and brand identity, he's had the privilege of creating enabling experiences for people with brand like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Isobar, Wema Bank and more.
