--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
            <div class="bgrid folio-item">
               <div class="item-wrap">
-               <img src="images\portfolio\gallery\Taruwa Festival 2019.jpg" alt="Beetle">
+               <img src="images\portfolio\gallery\Budweiser.jpg" alt="Budweiser bottle with floating cap">
                  <a href="#modal-04" class="overlay">
                     <div class="folio-item-table">
                      <div class="folio-item-cell">
@@ -361,7 +361,7 @@
          <div id="modal-04" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\Taruwa Festival 2019-m.jpg" alt="" />
+              <img src="images\portfolio\modals\Budweiser-m.jpg" alt="budweiser label collage" />
             </div>
 
            <div class="description-box">
