--- a/index.html
+++ b/index.html
@@ -365,10 +365,10 @@
             </div>
 
            <div class="description-box">
-              <h4>Taruwa Festival 2019</h4>
-              <p>I worked with the team at Taruwa Festival 2019, designing the Festival identity as well as the communication materials for the festival.</p>
+              <h4>Budweiser</h4>
+              <p>I was responsible for brand, product and marketing designs for Budweiser Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
 
-              <div class="categories">Identity & Communication Design</div>
+              <div class="categories">Brand, Product & Marketing Design</div>
            </div>
 
              <div class="link-box">
