--- a/index.html
+++ b/index.html
@@ -218,13 +218,13 @@
 
            <div class="bgrid folio-item">
               <div class="item-wrap">
-               <img src="images\portfolio\gallery\Daily UI Challenge\Day 1\free.jpg" alt="image of a signup form for daily Ui challenge">
+               <img src="images\portfolio\gallery\Nivea.jpg" alt="Nivea men flatlay">
                  <a href="#modal-06" class="overlay">
                     <div class="folio-item-table">
                      <div class="folio-item-cell">
-                       <h3 class="folio-title">Daily UI Challenge</h3>
+                       <h3 class="folio-title">NIVEA MEN</h3>
                      <span class="folio-types">
-                       UX/UI Design
+                       Social media designs
                      </span>
                   </div>
                     </div>
@@ -401,14 +401,14 @@
          <div id="modal-06" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\free-m.jpg" alt="image showing mockup of sign up page design for dumebi's daily ui challenge" />
+              <img src="images\portfolio\modals\nivea-m.jpg" alt="image showing mockup of sign up page design for dumebi's daily ui challenge" />
             </div>
 
            <div class="description-box">
-              <h4>Daily UI Challenge</h4>
-              <p>Case study of my progress in the Daily UI Challenge.</p>
+              <h4>Nivea</h4>
+              <p>A collection of Social Media designs and animations done for NIVEA MEN Nigeria's Facebook page.</p>
 
-              <div class="categories">UI/UX Design</div>
+              <div class="categories">Social Media Design</div>
            </div>
 
              <div class="link-box">
