--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <h3>Dumebi Iwuchukwu is a strategist, designer and teacher. </h3>
 
                 <p>
-                  Working at the intersection of digital product design, advertising and brand identity, he's had the privilege of creating enabling experiences for people with brand like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Isobar, Wema Bank and more.
+                  Working at the intersection of digital product design, advertising and brand identity, he's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Isobar, Wema Bank and more.
             </div>
 
 </div>
@@ -366,7 +366,7 @@
 
            <div class="description-box">
               <h4>Budweiser</h4>
-              <p>I was responsible for brand, product and marketing designs for Budweiser Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
+              <p>These are brand, product and marketing designs done for Budweiser Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
 
               <div class="categories">Brand, Product & Marketing Design</div>
            </div>
