--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                      <div class="folio-item-cell">
                        <h3 class="folio-title">Budweiser</h3>
                      <span class="folio-types">
-                         Brand, Product & Marketing Design
+                         Brand & Marketing Design
                      </span>
                   </div>
                     </div>
@@ -224,7 +224,7 @@
                      <div class="folio-item-cell">
                        <h3 class="folio-title">NIVEA MEN</h3>
                      <span class="folio-types">
-                       Social media designs
+                       Social media design
                      </span>
                   </div>
                     </div>
@@ -234,13 +234,13 @@
 
            <div class="bgrid folio-item">
               <div class="item-wrap">
-               <img src="images\portfolio\gallery\Dumebi-branding-logo.jpg" alt="Dumebi iwuchukwu personal brand logo">
+               <img src="images\portfolio\gallery\Three Crowns.jpg" alt="Three Crowns food flatlay">
                <a href="#modal-02" class="overlay">
                     <div class="folio-item-table">
                      <div class="folio-item-cell">
-                       <h3 class="folio-title">Dumebi</h3>
+                       <h3 class="folio-title">Three Crowns Milk</h3>
                      <span class="folio-types">
-                         Brand Identity and Web development
+                         Social Media Designs
                      </span>
                   </div>
                     </div>
@@ -256,7 +256,7 @@
                       <div class="folio-item-cell">
                        <h3 class="folio-title">D3ntiti</h3>
                        <span class="folio-types">
-                          Brand Identity, Apparel and Marketing Design
+                          Brand Identity and Marketing Design
                        </span>
                    </div>
                      </div>
@@ -266,13 +266,13 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
-                <img src="images/portfolio/gallery/LAGOS-UX-DOJO-LOGO.png" alt="Lagos UX learning community Logo">
+                <img src="images\portfolio\gallery\Isobar.jpg" alt="Isobar branded hoodie">
                   <a href="#modal-05" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
-                        <h3 class="folio-title">Lagos<br> UX/UI Dojo</h3>
+                        <h3 class="folio-title">Isobar</h3>
                       <span class="folio-types">
-                        Learning Community
+                        Art Direction and Brand design
                       </span>
                    </div>
                      </div>
@@ -321,7 +321,7 @@
          <div id="modal-02" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\Dumebi-branding-logo-m.jpg" alt="modal image for dumebi iwuchukwu brand identity" />
+              <img src="images\portfolio\modals\three crowns-m.jpg" alt="food flatlay" />
             </div>
 
            <div class="description-box">
@@ -381,7 +381,7 @@
          <div id="modal-05" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/modals/LAGOS--ux-ui-dojo-logo-m.png" alt="" />
+              <img src="images\portfolio\modals\isobar-m.jpg" alt="branded hoodie" />
             </div>
 
            <div class="description-box">
@@ -401,7 +401,7 @@
          <div id="modal-06" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\nivea-m.jpg" alt="image showing mockup of sign up page design for dumebi's daily ui challenge" />
+              <img src="images\portfolio\modals\nivea-m.jpg" alt="flatlay" />
             </div>
 
            <div class="description-box">
