--- a/index.html
+++ b/index.html
@@ -282,6 +282,38 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
+                <img src="images\portfolio\gallery\Peak 456.jpg" alt="food flatlay">
+                  <a href="#modal-07" class="overlay">
+                     <div class="folio-item-table">
+                      <div class="folio-item-cell">
+                        <h3 class="folio-title">Peak 456 Milk</h3>
+                      <span class="folio-types">
+                        Art Direction and Marketing Design
+                      </span>
+                   </div>
+                     </div>
+                  </a>
+               </div>
+            </div> <!-- /folio-item -->
+
+            <div class="bgrid folio-item">
+               <div class="item-wrap">
+                <img src="images\portfolio\gallery\Schweppes.jpg" alt="hand holding a cocktail">
+                  <a href="#modal-08" class="overlay">
+                     <div class="folio-item-table">
+                      <div class="folio-item-cell">
+                        <h3 class="folio-title">Schweppes</h3>
+                      <span class="folio-types">
+                        Art Direction and Marketing Design
+                      </span>
+                   </div>
+                     </div>
+                  </a>
+               </div>
+            </div> <!-- /folio-item -->
+
+            <div class="bgrid folio-item">
+               <div class="item-wrap">
                 <img src="images\portfolio\gallery\selfie.jpg"alt="Dangote Pasta Pack ad">
                   <a href="#modal-03" class="overlay">
                      <div class="folio-item-table">
@@ -417,6 +449,26 @@
              </div>
 
          </div> <!-- /modal-06 -->
+
+         <div id="modal-07" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images\portfolio\modals\Peak 456-m.jpg" alt="flatlay" />
+            </div>
+
+           <div class="description-box">
+              <h4>Peak 456 Milk</h4>
+              <p>A collection of Social Media designs done for Peak 456 Milk Brand.</p>
+
+              <div class="categories">Social Media Design</div>
+           </div>
+
+             <div class="link-box">
+                <a href="#" class="popup-modal-dismiss">Details</a>
+              <a href="#" class="popup-modal-dismiss">Close</a>
+             </div>
+
+         </div> <!-- /modal-07 -->
 
 
          <!-- modal popups - end
