--- a/offline.html
+++ b/offline.html
@@ -169,7 +169,7 @@
               <h3>Dumebi Iwuchukwu is a strategist, designer and teacher. </h3>
 
                 <p>
-                  Working at the intersection of digital product design, advertising and brand identity, he's had the privilege of creating enabling experiences for people with brand like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Isobar, Wema Bank and more.
+                  Working at the intersection of digital product design, advertising and brand identity, he's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Isobar, Wema Bank and more.
             </div>
 
 </div>
@@ -208,7 +208,7 @@
                      <div class="folio-item-cell">
                        <h3 class="folio-title">Budweiser</h3>
                      <span class="folio-types">
-                         Brand, Product & Marketing Design
+                         Brand & Marketing Design
                      </span>
                   </div>
                     </div>
@@ -224,7 +224,7 @@
                      <div class="folio-item-cell">
                        <h3 class="folio-title">NIVEA MEN</h3>
                      <span class="folio-types">
-                       Social media designs
+                       Social media design
                      </span>
                   </div>
                     </div>
@@ -234,13 +234,13 @@
 
            <div class="bgrid folio-item">
               <div class="item-wrap">
-               <img src="images\portfolio\gallery\Dumebi-branding-logo.jpg" alt="Dumebi iwuchukwu personal brand logo">
+               <img src="images\portfolio\gallery\Three Crowns.jpg" alt="Three Crowns food flatlay">
                <a href="#modal-02" class="overlay">
                     <div class="folio-item-table">
                      <div class="folio-item-cell">
-                       <h3 class="folio-title">Dumebi</h3>
+                       <h3 class="folio-title">Three Crowns Milk</h3>
                      <span class="folio-types">
-                         Brand Identity and Web development
+                         Social Media Designs
                      </span>
                   </div>
                     </div>
@@ -256,7 +256,7 @@
                       <div class="folio-item-cell">
                        <h3 class="folio-title">D3ntiti</h3>
                        <span class="folio-types">
-                          Brand Identity, Apparel and Marketing Design
+                          Brand Identity and Marketing Design
                        </span>
                    </div>
                      </div>
@@ -266,13 +266,45 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
-                <img src="images/portfolio/gallery/LAGOS-UX-DOJO-LOGO.png" alt="Lagos UX learning community Logo">
+                <img src="images\portfolio\gallery\Isobar.jpg" alt="Isobar branded hoodie">
                   <a href="#modal-05" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
-                        <h3 class="folio-title">Lagos<br> UX/UI Dojo</h3>
+                        <h3 class="folio-title">Isobar</h3>
                       <span class="folio-types">
-                        Learning Community
+                        Art Direction and Brand design
+                      </span>
+                   </div>
+                     </div>
+                  </a>
+               </div>
+            </div> <!-- /folio-item -->
+
+            <div class="bgrid folio-item">
+               <div class="item-wrap">
+                <img src="images\portfolio\gallery\Peak 456.jpg" alt="food flatlay">
+                  <a href="#modal-07" class="overlay">
+                     <div class="folio-item-table">
+                      <div class="folio-item-cell">
+                        <h3 class="folio-title">Peak 456 Milk</h3>
+                      <span class="folio-types">
+                        Art Direction and Marketing Design
+                      </span>
+                   </div>
+                     </div>
+                  </a>
+               </div>
+            </div> <!-- /folio-item -->
+
+            <div class="bgrid folio-item">
+               <div class="item-wrap">
+                <img src="images\portfolio\gallery\Schweppes.jpg" alt="hand holding a cocktail">
+                  <a href="#modal-08" class="overlay">
+                     <div class="folio-item-table">
+                      <div class="folio-item-cell">
+                        <h3 class="folio-title">Schweppes</h3>
+                      <span class="folio-types">
+                        Art Direction and Marketing Design
                       </span>
                    </div>
                      </div>
@@ -321,7 +353,7 @@
          <div id="modal-02" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\Dumebi-branding-logo-m.jpg" alt="modal image for dumebi iwuchukwu brand identity" />
+              <img src="images\portfolio\modals\three crowns-m.jpg" alt="food flatlay" />
             </div>
 
            <div class="description-box">
@@ -366,7 +398,7 @@
 
            <div class="description-box">
               <h4>Budweiser</h4>
-              <p>I was responsible for brand, product and marketing designs for Budweiser Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
+              <p>These are brand, product and marketing designs done for Budweiser Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
 
               <div class="categories">Brand, Product & Marketing Design</div>
            </div>
@@ -381,7 +413,7 @@
          <div id="modal-05" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/modals/LAGOS--ux-ui-dojo-logo-m.png" alt="" />
+              <img src="images\portfolio\modals\isobar-m.jpg" alt="branded hoodie" />
             </div>
 
            <div class="description-box">
@@ -401,7 +433,7 @@
          <div id="modal-06" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\nivea-m.jpg" alt="image showing mockup of sign up page design for dumebi's daily ui challenge" />
+              <img src="images\portfolio\modals\nivea-m.jpg" alt="flatlay" />
             </div>
 
            <div class="description-box">
@@ -418,6 +450,45 @@
 
          </div> <!-- /modal-06 -->
 
+         <div id="modal-07" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images\portfolio\modals\Peak 456-m.jpg" alt="flatlay" />
+            </div>
+
+           <div class="description-box">
+              <h4>Peak 456 Milk</h4>
+              <p>A collection of Social Media designs done for Peak 456 Milk Brand.</p>
+
+              <div class="categories">Social Media Design</div>
+           </div>
+
+             <div class="link-box">
+                <a href="#" class="popup-modal-dismiss">Details</a>
+              <a href="#" class="popup-modal-dismiss">Close</a>
+             </div>
+
+         </div> <!-- /modal-07 -->
+
+         <div id="modal-08" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images\portfolio\modals\Peak 456-m.jpg" alt="flatlay" />
+            </div>
+
+           <div class="description-box">
+              <h4>Schweppes</h4>
+              <p>A collection of Social Media designs done for Schweppes.</p>
+
+              <div class="categories">Social Media Design</div>
+           </div>
+
+             <div class="link-box">
+                <a href="#" class="popup-modal-dismiss">Details</a>
+              <a href="#" class="popup-modal-dismiss">Close</a>
+             </div>
+
+         </div> <!-- /modal-08 -->
 
          <!-- modal popups - end
             ============================================================= -->
