--- a/offline.html
+++ b/offline.html
@@ -130,14 +130,17 @@
         </div> <!-- end home-content -->
 
         <ul class="home-social">
+          <li>
+              <a href="https://wwww.linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
+          </li>
+          <li>
+              <a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
+          </li>
             <li>
-                <a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://www.github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
             </li>
             <li>
-                <a href="https://github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
-            </li>
-            <li>
-                <a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
+                <a href="https://wwww.instagram.com/dum3bi/" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
         </ul>
         <!-- end home-social -->
@@ -446,18 +449,21 @@
                 </div>
 
                 <ul class="footer-social">
-
-                    <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
-                        <i class="im im-instagram" aria-hidden="true"></i>
-                        <span>Instagram</span>
-                    </a></li>
+                  <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener">
+                      <i class="im im-linkedin" aria-hidden="true"></i>
+                      <span>Linkedin</span>
+                  </a></li>
+                  <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
+                      <i class="im im-behance" aria-hidden="true"></i>
+                      <span>Behance</span>
+                  </a></li>
                     <li><a href="https://github.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-github" aria-hidden="true"></i>
                         <span>Github</span>
                     </a></li>
-                    <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener">
-                        <i class="im im-linkedin" aria-hidden="true"></i>
-                        <span>Linkedin</span>
+                    <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
+                        <i class="im im-instagram" aria-hidden="true"></i>
+                        <span>Instagram</span>
                     </a></li>
                 </ul>
 
