--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         <div class="row narrow section-intro">
             <div class="col-full">
                 <h3>Let's work together</h3>
-                <h1>Contact.</h1>
+                <h1>Contact me.</h1>
 
                 <p>I like to listen.</p>
             </div>
@@ -400,7 +400,7 @@
                         <input name="contactSubject" input type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
                     </div>
                     <div class="form-field">
-                        <textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
+                        <textarea name="contactMessage" id="contactMessage" placeholder="Message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
                     </div>
                     <div class="form-field">
                         <button class="full-width btn--primary">Submit</button>
