--- a/offline.html
+++ b/offline.html
@@ -11,8 +11,8 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-    <title>Dumebi Iwuchukwu - Strategy, Design and Design Training</title>
-    <meta name="description" content="Chukwudumebi Iwuchukwu is a strategist, designer and teacher . He works with brands to create enabling experiences for consumers and helps people become amazing designers.">
+    <title>Dumebi Iwuchukwu | Experience Designer</title>
+    <meta name="description" content="Working at the intersection of digital product design, advertising and brand identity, Dumebi has the privilege of creating enabling experiences for people.">
     <meta name="theme-color" content="#1f1f22"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
@@ -24,18 +24,18 @@
 
   <meta property="og:url" content="https://www.dum3bi.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Dum3bi- Portfolio website of Dumebi Iwuchukwu.">
-  <meta property="og:description" content="Dumebi Iwuchukwu is an art director, and UX/UI designer based in Lagos Nigeria. He teaches art direction at Oxygen academy Lagos">
+  <meta property="og:title" content="Dumebi Iwuchukwu | Experience Designer.">
+  <meta property="og:description" content="Working at the intersection of digital product design, advertising and brand identity, Dumebi has the privilege of creating enabling experiences for people.">
   <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
   <meta property="og:image:alt" content="Dumebi's logo">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Dumebi Iwuchukwu">
-  <meta name="twitter:description" content="Dumebi Iwuchukwu is an art director, and UX/UI designer based in Lagos Nigeria. He teaches art direction at Oxygen academy Lagos.">
+  <meta name="twitter:description" content="Working at the intersection of digital product design, advertising and brand identity, Dumebi has the privilege of creating enabling experiences for people.">
   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
 
   <meta property="og:type" content="website">
 
-  <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Art Director, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, UI/UX, UX/UI, design, HCI, Usability, Value proposition design, design thinking, Creative, Lagos, Ozubulu,  Nigeria">
+  <meta name="keywords" content="Dumebi Iwuchukwu, Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Art Director, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, UI/UX, UX/UI, design, HCI, Usability, Value proposition design, design thinking, Creative, Lagos, Ozubulu,  Nigeria, Experience design">
     <meta name="author" content="Dumebi Iwuchukwu">
 
          <!-- mobile specific metas
@@ -102,9 +102,8 @@
 
 
               <h1>
-              Strategist,<br>
-              Designer,<br>
-              Teacher.<br>
+              Hi, I'm Dumebi<br>
+              I design experiences.<br>
 
 
               </h1>
@@ -156,7 +155,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi</h1>
-                <p class="lead">I design enabling experiences for people.</p>
+                <p class="lead">Experience Designer</p>
             </div>
         </div>
 
@@ -169,7 +168,7 @@
 <div class="col-six tab-full right">
 
             <div>
-              <h3>Dumebi Iwuchukwu is a strategist, designer and teacher. </h3>
+              <h3>Dumebi Iwuchukwu is an art director, experience designer and teacher. </h3>
 
                 <p>
                   Working at the intersection of digital product design, advertising and brand identity, he's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Isobar, Wema Bank and more.
