--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 
 
               <h1>
-              Hi, I'm Dumebi<br>
-              I design experiences.<br>
 
+              Hi👋🏽, I'm Dumebi.<b>
+              I design beautiful experiences
 
               </h1>
 
@@ -154,8 +154,8 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full text-center">
                 <h3>About</h3>
-                <h1>Dumebi</h1>
-                <p class="lead">Experience Designer</p>
+                <h1>Dumebi Iwuchukwu</h1>
+                <p class="lead">Art Director | UX Designer | Teacher</p>
             </div>
         </div>
 
@@ -168,10 +168,11 @@
 <div class="col-six tab-full right">
 
             <div>
-              <h3>Dumebi Iwuchukwu is an art director, experience designer and teacher. </h3>
+              <h3>Dumebi's passion for experience design can be traced back to his formal training as a medical radiographer, where he spent significant time working on patient care and diagnosis.</h3>
 
-                <p>
-                  Working at the intersection of digital product design, advertising and brand identity, he's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Isobar, Wema Bank and more.
+               <p>As a designer, he specializes in art direction, brand identity, and user experience design.</p>
+
+                <p>He's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Isobar, Wema Bank and more.</p>
             </div>
 
 </div>
