--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-    <title>Dumebi Iwuchukwu | Experience Designer</title>
-    <meta name="description" content="Working at the intersection of digital product design, advertising and brand identity, Dumebi has the privilege of creating enabling experiences for people.">
+    <title>Dumebi Iwuchukwu | Experience Designer</title>I help Businesses Scale and Make Money by designing Brands, Products and Experiences at the Intersection of Culture, Design and Technology.">
     <meta name="theme-color" content="#1f1f22"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
