--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-    <title>Dumebi Iwuchukwu | Experience Designer</title>I help Businesses Scale and Make Money by designing Brands, Products and Experiences at the Intersection of Culture, Design and Technology.">
+    <title>Dumebi Iwuchukwu | Product Designer</title>
+    <meta name="description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
     <meta name="theme-color" content="#1f1f22"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
@@ -23,8 +24,8 @@
 
   <meta property="og:url" content="https://www.dum3bi.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Dumebi Iwuchukwu | Experience Designer.">
-  <meta property="og:description" content="Working at the intersection of digital product design, advertising and brand identity, Dumebi has the privilege of creating enabling experiences for people.">
+  <meta property="og:title" content="Dumebi Iwuchukwu | Product Designer.">
+  <meta property="og:description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
   <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
   <meta property="og:image:alt" content="Dumebi's logo">
   <meta name="twitter:card" content="summary_large_image">
@@ -60,6 +61,9 @@
     <!-- favicons
     ================================================== -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- Cookie consent
+    ================================================== -->
 
 <link rel="stylesheet" type="text/css" href="//wpcc.io/lib/1.0.2/cookieconsent.min.css"/><script src="//wpcc.io/lib/1.0.2/cookieconsent.min.js"></script><script>window.addEventListener("load", function(){window.wpcc.init({"colors":{"popup":{"background":"#000000","text":"#ffffff","border":"#ffffff"},"button":{"background":"#ffffff","text":"#000000"}},"position":"bottom","border":"normal","corners":"normal","transparency":"5","content":{"href":"https://www.dum3bi.com/cookie-policy"}})});</script>
 </head>
@@ -101,47 +105,16 @@
 
 
               <h1>
-
-              Hi👋🏽, I'm Dumebi.<b>
-              I design beautiful experiences
-
+                Hi👋🏽, I'm Dumebi and I'm a Product Designer
               </h1>
 
-                <div class="home-content__buttons">
-                  <a href="#about" class="smoothscroll btn btn--stroke">
-                      More About Me
-                  </a>
-                    <a href="#portfolio" class="smoothscroll btn btn--stroke">
-                        Latest Projects
-                    </a>
 
-                </div>
-
-                <div class="home-content__scroll">
-                    <a href="#about" class="scroll-link smoothscroll">
-                        <span>Scroll Down</span>
-                    </a>
-                </div>
 
             </div>
 
         </div> <!-- end home-content -->
 
-        <ul class="home-social">
-          <li>
-              <a href="https://wwww.linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
-          </li>
-          <li>
-              <a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
-          </li>
-            <li>
-                <a href="https://www.github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
-            </li>
-            <li>
-                <a href="https://wwww.instagram.com/dum3bi/" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
-            </li>
-        </ul>
-        <!-- end home-social -->
+
 
     </section> <!-- end s-home -->
 
@@ -154,7 +127,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi Iwuchukwu</h1>
-                <p class="lead">Art Director | UX Designer | Teacher</p>
+                <p class="lead">Art Director | Product Designer</p>
             </div>
         </div>
 
