--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 
               <h1>
-                Hi👋🏽, I'm Dumebi and I'm a Product Designer
+                Hi👋🏽, I'm Dumebi
               </h1>
 
 
@@ -127,7 +127,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi Iwuchukwu</h1>
-                <p class="lead">Art Director | Product Designer</p>
+                <p class="lead">Product Designer</p>
             </div>
         </div>
 
