--- a/index.html
+++ b/index.html
@@ -107,16 +107,13 @@
               <h1>
                 Hi👋🏽, I'm Dumebi.
               </h1>
-              <h3>I help businesses make money by designing brands, products and experiences that people will love
-              </h3>
-
 
              <div class="home-content__buttons">
                  <a href="#works" class="smoothscroll btn btn--stroke">
                      Latest Projects
                  </a>
                  <a href="#about" class="smoothscroll btn btn--stroke">
-                     More About Me
+                     About Me
                  </a>
              </div>
 
@@ -160,7 +157,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi Iwuchukwu</h1>
-                <p class="lead">Product Designer</p>
+                <p class="lead">Art Director & Product Designer</p>
             </div>
         </div>
 
