--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 
               <h1>
-                Hi👋🏽, I'm Dumebi.
+                Hi👋🏼, I'm Dumebi.
               </h1>
 
              <div class="home-content__buttons">
